# kb

./: .edict.toml  .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.bones/events/: 2026-04.events  2026-04.manifest  2026-05.events
.seal/reviews/cr-4nkx0y/: events.jsonl
crates/kb-cli/: Cargo.toml
crates/kb-cli/src/: chat.rs  config.rs  forget.rs  id_resolve.rs  init.rs  jobs.rs  jobs_cmd.rs  ls.rs  main.rs  migrate.rs  publish.rs  review.rs  root.rs  session.rs
crates/kb-cli/src/eval/: README.md  golden.rs  golden.toml.example  mod.rs  runner.rs  scoring.rs
crates/kb-cli/tests/: gold_harness.rs  integration_tests.rs
crates/kb-cli/tests/common/: mod.rs
crates/kb-cli/tests/fixtures/corpus-tiny/: README.md  anchors.md  basic.md  images.md  long-tokens.md  sample.html  unicode.md
crates/kb-cli/tests/gold/: baseline.json  questions.toml
crates/kb-cli/tests/gold/corpus/: architecture.md  cli.md  compile.md  config.md  ingest.md  llm-backends.md  provenance.md  query.md  review-workflow.md  testing.md
crates/kb-cli/tests/snapshots/: integration_tests__ask_dry_run_data_keys.snap  integration_tests__compile_data_keys.snap  integration_tests__compile_data_keys.snap.new  integration_tests__doctor_data_keys.snap  integration_tests__ingest_data_keys.snap  integration_tests__inspect_data_keys.snap  integration_tests__lint_data_keys.snap  integration_tests__lint_envelope_keys.snap  integration_tests__resolve_data_keys.snap  integration_tests__smoke_test_kb_init_command.snap  integration_tests__smoke_test_kb_init_with_explicit_path.snap
crates/kb-compile/: Cargo.toml
crates/kb-compile/src/: backlinks.rs  captions.rs  concept_candidate.rs  concept_extraction.rs  concept_merge.rs  concept_suggestions.rs  imputed_fix.rs  index_page.rs  lib.rs  orchestrator.rs  pipeline.rs  progress.rs  promotion.rs  source_page.rs  source_summary.rs  state.rs
crates/kb-compile/tests/: captions_integration.rs  concept_categories.rs
crates/kb-core/: Cargo.toml
crates/kb-core/src/: citation_verify.rs  frontmatter.rs  fs.rs  hashing.rs  lib.rs  managed_region.rs  normalized.rs  paths.rs  source_identity.rs  state.rs  transcript.rs
crates/kb-core/tests/: transcript_fixtures.rs
crates/kb-core/tests/fixtures/: delta-team-intro.kbtx.md  usb-team-intro.kbtx.md
crates/kb-ingest/: Cargo.toml
crates/kb-ingest-audio/: Cargo.toml
crates/kb-ingest-audio/examples/: capture_model_hashes.rs
crates/kb-ingest-audio/src/: decode.rs  lib.rs  models.rs  pipeline.rs  segmentation.rs  speaker_bank.rs
crates/kb-ingest/src/: headings.rs  image_refs.rs  lib.rs  ocr.rs  pdf_page_extract.rs  preprocess.rs  repo.rs  url.rs
crates/kb-ingest/tests/: ocr_fallback.rs  pdf_page_ingest.rs  repo_ingest.rs
crates/kb-lint/: Cargo.toml
crates/kb-lint/src/: contradictions.rs  drift.rs  impute.rs  lib.rs  orphan_sources.rs  stale_citations.rs
crates/kb-llm/: Cargo.toml
crates/kb-llm/prompts/: ask.md  ask_auto.md  ask_chart.md  ask_excalidraw.md  ask_session.md  compile.md  concept_body.md  detect_contradictions.md  extract_concepts.md  filter_concept_suggestions.md  generate_concept_from_candidate.md  impute_gap.md  merge_concept_candidates.md  rewrite_query.md  summarize_document.md
crates/kb-llm/prompts/personas/: analyst.md  researcher.md
crates/kb-llm/src/: adapter.rs  claude.rs  lib.rs  opencode.rs  pi.rs  provenance.rs  router.rs  subprocess.rs  templates.rs
crates/kb-query/: Cargo.toml
crates/kb-query/src/: artifact.rs  grounding.rs  hybrid.rs  images.rs  lexical.rs  lib.rs  paths.rs  writer.rs
crates/kb-query/src/semantic/: chunk.rs  embed.rs  minilm.rs  mod.rs  model.rs  onnx_model.rs  rerank.rs  search.rs
crates/kb-query/src/structural/: graph.rs  mod.rs  pagerank.rs
crates/kb-sqlite-vec/: Cargo.toml
crates/kb-sqlite-vec/src/: lib.rs
crates/kb-web/: Cargo.toml
crates/kb-web/assets/: style.css
crates/kb-web/src/: lib.rs  markdown.rs  server.rs
crates/kb-web/tests/: smoke.rs
docs/: cli-json-schema.md
docs/eval/: grounding-metrics.md
docs/perf/: baseline.md
notes/: image-captioning-eval.md  managed_regions.md  plan.md  plan.review.1.md  semantic-retrieval.md  transcript-spec.md
plugin-obsidian/: .gitignore  README.md  esbuild.config.mjs  manifest.json  package.json
plugin-obsidian/src/: main.ts
scripts/: benchmark.sh
tools/audio-transcribe/: README.md  pyproject.toml
tools/audio-transcribe/src/kb_audio_transcribe/: __init__.py  cli.py  kbtx.py  pipeline.py
ws/bn-347/notes/: managed_regions.md
