[workspace]
members = [
    "crates/kb-cli",
    "crates/kb-compile",
    "crates/kb-core",
    "crates/kb-ingest",
    "crates/kb-ingest-audio",
    "crates/kb-lint",
    "crates/kb-llm",
    "crates/kb-query",
    "crates/kb-sqlite-vec",
    "crates/kb-web",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
globset = "0.4"
ignore = "0.4"
regex = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlite-vec = "0.1.7-alpha.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
terseid = "0.1"
url = "2"

# Optional ML backend (kb-query semantic-ort feature)
ort = "2.0.0-rc.10"
tokenizers = "0.19"
ureq = "2.10"
dirs = "5"

kb-core = { path = "crates/kb-core" }
kb-llm = { path = "crates/kb-llm" }
kb-ingest = { path = "crates/kb-ingest" }
kb-ingest-audio = { path = "crates/kb-ingest-audio" }
kb-compile = { path = "crates/kb-compile" }
kb-query = { path = "crates/kb-query" }
kb-lint = { path = "crates/kb-lint" }
kb-sqlite-vec = { path = "crates/kb-sqlite-vec" }
kb-web = { path = "crates/kb-web" }
