[package]
name = "kb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "kb"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
clap.workspace = true
regex.workspace = true
reedline = "0.47"
fs2.workspace = true
kb-compile.workspace = true
kb-core.workspace = true
kb-ingest.workspace = true
kb-lint.workspace = true
kb-llm.workspace = true
kb-query.workspace = true
kb-sqlite-vec.workspace = true
kb-web.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
termimad = "0.34"
terseid = "0.1"
toml.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2.1"
insta = { version = "1.39", features = ["json"] }
predicates = "3"
regex = "1"
