[package]
name = "kb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "kb"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = []
# Enable NVIDIA CUDA acceleration for `kb ingest --audio`. Requires a
# CUDA toolkit on the build host. Builds a non-portable binary; default
# CPU build remains the supported distribution.
cuda = ["kb-ingest-audio/cuda"]
# Enable the ONNX MiniLM-L6-v2 semantic backend (bn-1rww). Pulls in the
# `ort`, `tokenizers`, and `ureq` dependencies. Off by default so a plain
# `cargo install --path crates/kb-cli` keeps the lighter dependency footprint.
# Activate with `cargo install --path crates/kb-cli --features semantic-ort`
# (or `just install-semantic-ort`).
semantic-ort = ["kb-query/semantic-ort"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
clap.workspace = true
regex.workspace = true
reedline = "0.47"
fs2.workspace = true
kb-compile.workspace = true
kb-core.workspace = true
kb-ingest.workspace = true
kb-ingest-audio.workspace = true
kb-lint.workspace = true
kb-llm.workspace = true
kb-query.workspace = true
kb-sqlite-vec.workspace = true
kb-web.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
termimad = "0.34"
terseid = "0.1"
toml.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2.1"
insta = { version = "1.39", features = ["json"] }
predicates = "3"
regex = "1"
