[package]
name = "kb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "kb"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = []
# Enable NVIDIA CUDA acceleration for `kb ingest --audio`. Requires a
# CUDA toolkit on the build host. Builds a non-portable binary; default
# CPU build remains the supported distribution.
cuda = ["kb-ingest-audio/cuda"]
# Force the ONNX MiniLM-L6-v2 semantic backend on regardless of platform.
# Non-Windows builds enable it automatically via the target-specific dep
# section below; this flag is the escape hatch for Windows users (or
# cross-compiles) who want to opt in despite the platform default.
semantic-ort = ["kb-query/semantic-ort"]

# Auto-select the semantic backend per platform (mirrors bones-cli, bn-2xbd).
# Non-Windows: MiniLM-L6-v2 via ONNX Runtime — the higher-quality backend.
# Windows: hash backend only, to avoid ONNX-Runtime CRT linking conflicts
# until kb grows a model2vec backend.
[target.'cfg(not(windows))'.dependencies]
kb-query = { workspace = true, features = ["semantic-ort"] }

[target.'cfg(windows)'.dependencies]
kb-query = { workspace = true }

[dependencies]
anyhow.workspace = true
blake3.workspace = true
clap.workspace = true
regex.workspace = true
reedline = "0.47"
fs2.workspace = true
kb-compile.workspace = true
kb-core.workspace = true
kb-ingest.workspace = true
kb-ingest-audio.workspace = true
kb-lint.workspace = true
kb-llm.workspace = true
kb-sqlite-vec.workspace = true
kb-web.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
termimad = "0.34"
terseid = "0.1"
toml.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2.1"
insta = { version = "1.39", features = ["json"] }
predicates = "3"
regex = "1"
