[package]
name = "kb-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
html2md = "0.2.15"
ignore.workspace = true
kb-core.workspace = true
kb-llm.workspace = true
readability = "0.3.0"
regex.workspace = true
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde.workspace = true
serde_json.workspace = true
terseid = "0.1"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
tempfile.workspace = true
