[package]
name = "kb-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.8"
kb-core.workspace = true
kb-query.workspace = true
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower = "0.5"
tracing.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.5", features = ["util"] }
