[project]
name = "kb-audio-transcribe"
version = "0.1.0"
description = "Speaker-diarized transcripts from audio for kb ingestion"
requires-python = ">=3.11,<3.13"
dependencies = [
    "whisperx>=3.4",
    "torch>=2.1",
    "torchaudio>=2.1",
    "huggingface_hub>=0.24",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
kb-audio-transcribe = "kb_audio_transcribe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kb_audio_transcribe"]
